Test-Umbau auf junit5, angefangen bei 'UnitOfMeasureReactiveRepositoryIT'
TODO: andere Tests nachziehen!

nach Umbau auf
- gradle-wrapper v6.6.1
- Java 12
- Spring Boot Version 2.3.3.RELEASE

analog zu 'https://www.udemy.com/course/spring-framework-5-beginner-to-guru/learn/lecture/7796368' - Lektion 21/331