@@ -1,51 +1,66 @@
 buildscript {
-	ext {
-		springBootVersion = '2.3.3.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-		maven { url "https://repo.spring.io/snapshot" }
-		maven { url "https://repo.spring.io/milestone" }
-		maven { url "https://plugins.gradle.org/m2/" }
-	}
+    ext {
+        springBootVersion = '2.3.3.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+    }
 
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		// lombok (see: https://projectlombok.org/setup/gradle):
-		classpath("io.freefair.gradle:lombok-plugin:5.2.1")
-		}
-	}
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+}
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'io.freefair.lombok'
 apply plugin: 'jacoco'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 12
 
 repositories {
-	mavenCentral()
-	maven { url "https://repo.spring.io/snapshot" }
-	maven { url "https://repo.spring.io/milestone" }
+    mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-starter-webflux')
-	runtime('org.springframework.boot:spring-boot-devtools')
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb'
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb-reactive'
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
-    compile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
-	testCompile group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
-	compile 'org.webjars:bootstrap:3.3.7-1'
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('io.projectreactor:reactor-test')
+    implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-webflux')
+    implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
+    implementation('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
+    implementation('org.springframework.boot:spring-boot-starter-validation')
+    implementation('org.webjars:bootstrap:3.4.1')
+    implementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+    implementation('cz.jirutka.spring:embedmongo-spring:1.3.1')
+
+    compileOnly('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
+
+    testCompileOnly('org.projectlombok:lombok')
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+    testImplementation('org.junit.jupiter:junit-jupiter-api')
+    testImplementation('org.junit.jupiter:junit-jupiter-engine')
+    testCompileOnly('io.projectreactor:reactor-test')
+
+    testAnnotationProcessor('org.projectlombok:lombok')
+
+    // super-set, see: https://stackoverflow.com/a/44507716/7773582
+    testRuntimeOnly('org.springframework.boot:spring-boot-devtools')
 }
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+    jvmArgs '--enable-preview'
+}
+
 
 // export test coverage
 jacocoTestReport {
